--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
         app:tabMode="fixed"/>
     <View
         android:layout_width="match_parent"
-        android:layout_height="0.5dp"
+        android:layout_height="@dimen/stroke"
         android:background="@color/greyDivider"
         android:layout_above="@id/tabs"
         android:id="@+id/divider"/>
