--- a/app/src/main/res/layout/fr_translate.xml
+++ b/app/src/main/res/layout/fr_translate.xml
@@ -1,9 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
+<RelativeLayout
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/title_translate"/>
-</LinearLayout>
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:id="@+id/select_language">
+        <Spinner
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/from_language">
+        </Spinner>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_double_arrow"/>
+        <Spinner
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/to_language">
+        </Spinner>
+    </LinearLayout>
+    <RelativeLayout
+        android:layout_below="@id/select_language"
+        android:layout_margin="@dimen/small_margin"
+        android:padding="@dimen/small_margin"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/translate_field_height"
+        android:background="@drawable/sh_rectangle"
+        android:id="@+id/translation_field">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            app:srcCompat="@drawable/ic_close"
+            android:tint="@color/greyDivider"
+            android:id="@+id/clear_text" />
+        <EditText
+            android:layout_above="@id/clear_text"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@android:color/transparent"/>
+    </RelativeLayout>
+    <TextView
+        android:padding="@dimen/small_margin"
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/main_translation"
+        android:textSize="@dimen/from_text_size"
+        android:textColor="@android:color/black"
+        android:layout_below="@id/translation_field"
+        tools:text="Hi"/>
+    <TextView
+        android:padding="@dimen/small_margin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/main_word"
+        android:textSize="@dimen/from_text_size"
+        android:textColor="@android:color/black"
+        android:layout_below="@id/main_translation"
+        tools:text="Привет"/>
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/ic_not_favorite"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@id/main_translation"
+        android:tint="@color/colorPrimary"
+        android:layout_margin="@dimen/small_margin"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/other_translations_container"
+        android:orientation="vertical">
+
+    </LinearLayout>
+
+</RelativeLayout>
+</ScrollView>
