--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="small_margin">5dp</dimen>
+    <dimen name="text_margin">7dp</dimen>
     <dimen name="action_bar_height">57dp</dimen>
+    <dimen name="stroke">0.5dp</dimen>
+    <dimen name="translate_field_height">150dp</dimen>
+    <dimen name="lang_info_width">60dp</dimen>
+
+    <dimen name="from_text_size">20sp</dimen>
+    <dimen name="to_text_size">15sp</dimen>
+
 
 </resources>
