--- a/app/src/main/res/layout/fr_translate.xml
+++ b/app/src/main/res/layout/fr_translate.xml
@@ -11,6 +11,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <LinearLayout
+        android:padding="@dimen/text_margin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -51,7 +52,11 @@
         <EditText
             android:layout_above="@id/clear_text"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/text_to_translate"
+            android:imeOptions="actionDone"
+            android:inputType="text"
+            android:layout_alignParentTop="true"
             android:background="@android:color/transparent"/>
     </RelativeLayout>
     <TextView
@@ -81,7 +86,9 @@
         android:layout_alignParentRight="true"
         android:layout_alignTop="@id/main_translation"
         android:tint="@color/colorPrimary"
-        android:layout_margin="@dimen/small_margin"/>
+        android:id="@+id/add_to_favorite"
+        android:layout_margin="@dimen/small_margin"
+        android:visibility="gone"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
