--- a/app/src/main/res/layout/rec_it_favorite.xml
+++ b/app/src/main/res/layout/rec_it_favorite.xml
@@ -6,15 +6,15 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="@dimen/small_margin">
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <CheckBox
+        android:layout_width="@dimen/img_size"
+        android:layout_height="@dimen/img_size"
+        android:button="@drawable/sel_star"
+        android:layout_alignEnd="@id/main_translation"
+        android:layout_alignRight="@id/main_translation"
+        android:layout_alignTop="@id/main_translation"
         android:id="@+id/icon"
-        app:srcCompat="@drawable/ic_favorite"
-        android:tint="@color/colorPrimary"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="@dimen/small_margin"
-        android:layout_marginEnd="@dimen/small_margin"/>
+        android:layout_margin="@dimen/small_margin"/>
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
