--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,9 @@
     <dimen name="to_text_size">15sp</dimen>
 
 
+    <dimen name="img_size">24dp</dimen>
+    <dimen name="img_with_padding">34dp</dimen>
+
+
+
 </resources>
