--- a/app/src/main/res/layout/rec_it_favorite.xml
+++ b/app/src/main/res/layout/rec_it_favorite.xml
@@ -43,7 +43,7 @@
         android:layout_toLeftOf="@id/lang_info"
         android:textSize="@dimen/from_text_size"
         android:textColor="@android:color/black"
-        android:id="@+id/from_text"
+        android:id="@+id/text"
         tools:text="Привет"/>
     <TextView
         android:layout_width="match_parent"
@@ -52,7 +52,8 @@
         android:layout_toEndOf="@id/icon"
         android:layout_toStartOf="@id/lang_info"
         android:layout_toLeftOf="@id/lang_info"
-        android:layout_below="@id/from_text"
+        android:layout_below="@id/text"
+        android:id="@+id/translation"
         android:textSize="@dimen/to_text_size"
         android:textColor="@color/greyDivider"
         tools:text="hi"/>
