Add: -language detect -license text in history and favorites pages
Fix:
- bag with asynchronous operations when "translate with" click. With this was changed all spinners methods - now they return new lang desc, and getLangList's method's in Utills

--- a/app/src/main/res/layout/fr_history_favorites.xml
+++ b/app/src/main/res/layout/fr_history_favorites.xml
@@ -1,17 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
     <android.support.v7.widget.SearchView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textNoSuggestions"
         android:id="@+id/search">
-
     </android.support.v7.widget.SearchView>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/license"
+        android:gravity="center_horizontal"
+        android:textSize="@dimen/to_text_size"
+        android:textColor="@color/greyDivider"
+        android:text="@string/license"/>
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/recycler_view">
     </android.support.v7.widget.RecyclerView>
+
 </LinearLayout>
